Remove the Postman collection generation script as it is no longer needed for the project. Modified some endpoints. Updated openapi spec, readme.md
